examples/errors/lowercase_function_name/main.lc

function Test() {
	print("Hello world");
}

function main() {
	Test();
}
